--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js"
   },
+  "dependencies": {
+    "@repo/common":"*"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": ""
